<resources>
    <string name="app_name">Icarus</string>
    <string name="login">Login</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="login_error_message">Something went wrong. Please try after some time!!</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_username">This username address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_field_room">Please select %1$s</string>
    <string name="error_field_asset">Please select %1$s</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_settings">Settings</string>
    <string name="decline">Decline</string>
    <string name="accept">I Agree</string>
    <string name="my_assigned_checklist">My Assigned Checklists</string>
    <string name="all_checklist">Checklists</string>
    <string name="all">All</string>
    <string name="new_string">new</string>
    <string name="paused">Paused</string>
    <string name="normal">normal</string>
    <string name="emergency">Emergency</string>
    <string name="frequency">Frequency</string>
    <string name="my_department_checklist">My Department Checklists</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="new_text">New</string>
    <string name="due_today">Due Today</string>
    <string name="due_tomorrow">Due Tomorrow</string>
    <string name="due_yesterday">Due Yesterday</string>
    <string name="due_later">Was due %1$s days ago</string>
    <string name="due_earlier">Due in %1$s days</string>
    <string name="department_percentage">Department: %1$s</string>
    <string name="select_location">Select Location</string>
    <string name="ar">AR</string>
    <string name="ph">PH</string>
    <string name="sq">SQ</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="search">Search</string>
    <string name="approval_message">This checklist requires execution approval. Please go to the web
        application and request for approval.
    </string>
    <string name="no_approval_but_placeholder_message">This checklist contains pre-fill data
        capture. Please go to the web application to fill those prior to execution.
    </string>
    <string name="start">Start</string>
    <string name="assign">Assign</string>
    <string name="no_approval_no_placeholder_but_review_date_passed_message">You are not allowed to
        start or assign this checklist as it has expired.
    </string>
    <string name="no_approval_no_placeholder_but_review_date_passed_with_status_message">You are not
        allowed to start or assign this checklist as it %1$s.
    </string>
    <string name="not_approval_no_placeholder_but_review_date_passed_expired_message">This checklist
        is past its review date. Are you sure you want to continue?
    </string>
    <string name="start_assign_checklist_message">Do you want to Start or Assign checklist?</string>
    <string name="start_checklist_message">Do you want to Start this checklist?</string>
    <string name="resume_checklist_message">Do you want to Resume this checklist?</string>
    <string name="start_checklist">Start Checklist</string>
    <string name="assign_checklist">Assign Checklist</string>
    <string name="assigned_to">Assigned to</string>
    <string-array name="author">
        <item>Me</item>
    </string-array>
    <string name="close">Close</string>
    <string name="continue_string">Continue</string>
    <string name="assigne_start">Assign &amp; Start</string>
    <string name="room_asset">Room &amp; Asset</string>
    <string name="room_asset_x_x">%1$s &amp; %2$s</string>
    <string name="room_and_asset_x_x">%1$s and %2$s</string>
    <string name="start_assign_message">Do you want Start or Assign this checklist?</string>
    <string name="due_date">Due Date</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="mark_complete">Mark Complete</string>
    <string-array name="array">
        <item>Anurag 1</item>
        <item>Anurag 2</item>
    </string-array>
    <string name="title_activity_checklist_detail">ChecklistDetailActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="select_users">Select users</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort By</string>
    <string name="filters">Filters</string>
    <string name="favorite_on_top">Favorite</string>
    <string name="modified_ascending">Modified Ascending</string>
    <string name="modified_descending">Modified Descending</string>
    <string name="last_updated_desc">Last Updated Descending</string>
    <string name="last_updated_asc">Last Updated Ascending</string>
    <string name="due_date_desc">Due Date Descending</string>
    <string name="due_date_asc">Due Date Ascending</string>
    <string name="name_a_to_z">Name Ascending</string>
    <string name="name_z_to_a">Name Descending</string>
    <string name="status_new">Sort By New, Paused, In Progress</string>
    <string name="status_paused">Sort By Paused, In Progress, New</string>
    <string name="status_in_progress">Sort By In Progress, New, Paused</string>
    <string name="status_a_to_z">Status Ascending</string>
    <string name="status_z_to_a">Status Descending</string>
    <string-array name="type">
        <item>All</item>
        <item>Normal</item>
        <item>Emergency</item>
        <item>Frequency</item>
    </string-array>
    <string name="select_all">Select all</string>
    <string-array name="status">
        <item>All</item>
        <item>New</item>
        <item>Paused</item>
        <item>In Progress</item>
    </string-array>
    <string name="apply">Apply</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="department">Department</string>
    <string name="location_not_selected_error">Please select any 1 location</string>
    <string name="hurray">Hurray!</string>
    <string name="empty_assigned_checklist_message">There is no checklist which is assigned to you.</string>
    <string name="empty_complete_checklist_message">There is no checklist that has been completed.</string>
    <string name="empty_cancelled_checklist_message">There is no checklist that has been cancelled.</string>
    <string name="empty_checklist_message">There are no checklists available for you to use.</string>
    <string name="start_new_checklist">Start New Checklist</string>
    <string name="change_location">Change Location</string>
    <string name="sync">Sync</string>
    <string name="syncing">Syncing</string>
    <string name="sync_initial_message">Initial synchronization</string>
    <string name="sync_master_message">Fetching data for master checklists</string>
    <string name="sync_assigned_message">Fetching data for assigned checklists</string>
    <string name="sync_workorder_message">Fetching data for work orders</string>
    <string name="sync_post_message">Syncing data to the server</string>
    <string name="logout">Logout</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="cancel_checklist">Cancel checklist</string>
    <string name="suggestion">Suggestion</string>
    <string name="pending_elements">Pending Elements</string>
    <string name="view_report">View Report</string>
    <string name="pause_checklist">Pause Checklist</string>
    <string name="workorder">Work Orders</string>
    <string name="cancelled_checklist">Cancelled Checklists</string>
    <string name="completed_checklist">Completed Checklists</string>
    <string name="give_a_resaon_percentage">Please leave a reason to %1$s this checklist</string>
    <string name="give_a_resaon_percentage_skip_defer">Please leave a reason to %1$s this element </string>
    <string name="submit">Submit</string>
    <string name="case_not_handled">Case not handled</string>
    <string name="workorder_id_x">Work Order ID: %1$s</string>
    <string name="workorder_id_no_value">Work Order ID:</string>
    <string name="workorder_id">Work Order Id</string>
    <string name="workorder_id_ascending">Work Order ID (Ascending)</string>
    <string name="workorder_id_descending">Work Order ID (Descending)</string>
    <string-array name="priority">
        <item>All</item>
        <item>Urgent</item>
        <item>Normal</item>
        <item>Low</item>
    </string-array>
    <string name="not_synchronized">Not synchronized!</string>
    <string name="create_work_order">Create Work Order</string>
    <string name="work_order_complete">Work Order Completed</string>
    <string name="location">Location</string>
    <string name="title">Title</string>
    <string name="room">Room</string>
    <string name="asset">Asset</string>
    <string name="upload_file">Upload File</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="urgent">Urgent</string>
    <string name="low">Low</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="deferred">Deferred</string>
    <string name="defer">Defer</string>
    <string name="skip">Skip</string>
    <string name="completed">COMPLETED</string>
    <string name="slide_to_complete">SLIDE TO COMPLETE</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="record_details">RECORD DATA</string>
    <string name="enter_qa_credentials">Enter QA credentials</string>
    <string name="select_atleast_one">Select at least one option.</string>
    <string name="select_date">Choose a date</string>
    <string name="enter_value">Enter required data.</string>
    <string name="number_limit_validation">Value should be %1$s %2$s.</string>
    <string name="max_required">less than %1$s</string>
    <string name="min_required">more than %1$s</string>
    <string name="characters_limit_validation">Number of characters should be %1$s %2$s</string>
    <string name="references">References</string>
    <string name="references_images">References Images</string>
    <string name="references_videos">References Videos</string>
    <string name="hazard_icons">Hazards Expected</string>
    <string name="ppe_icons">PPEs Required</string>
    <string name="reference_links">Reference links</string>
    <string name="skip_checklist">Skip Element</string>
    <string name="deffer_checklist">Defer Element</string>
    <string name="start_checklist_or_goback">Start checklist or go back to open checklist screen</string>
    <string name="save">Save</string>
    <string name="reason">Reason</string>
    <string name="data_captured">Data Captured</string>
    <string name="notes">Notes</string>
    <string name="verifying_manually_reason_hint">Please leave a reason for verifying manually.</string>
    <string name="verify">Verify</string>
</resources>