<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewModel"
                type="com.icarus.workorder.viewmodels.WorkOrderCompleteViewModel"/>
    </data>


    <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:id="@+id/completeWorkOrder"
                    style="@style/DialogTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/work_order_complete"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                    android:id="@+id/galleryWidget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    app:bindAttachmentView="@{viewModel.galleryViewModel}"
                    app:layout_constraintTop_toBottomOf="@+id/completeWorkOrder"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etDescriptionView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/galleryWidget">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="start|top"
                        android:hint="@string/description"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:id="@+id/create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:letterSpacing="0.04"
                    android:onClick="@{() -> viewModel.onCompleteClick()}"
                    android:padding="12dp"
                    android:text="@string/save"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etDescriptionView"
                    tools:ignore="UnusedAttribute"/>

            <TextView
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center_horizontal"
                    android:letterSpacing="0.04"
                    android:onClick="@{() -> viewModel.onCancelClick()}"
                    android:padding="12dp"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="@+id/create"
                    app:layout_constraintEnd_toStartOf="@+id/create"
                    app:layout_constraintTop_toTopOf="@+id/create"
                    tools:ignore="UnusedAttribute"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>