<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.icarus.viewmodels.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/splash"
        android:gravity="center_horizontal"
        tools:context=".activity.LoginActivity">


        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingEnd="25dp"
                android:paddingStart="25dp"
                android:paddingTop="70dp">

                <ImageView
                    android:id="@+id/headerImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:minHeight="100dp"
                    android:minWidth="100dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_logo" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/usernamePasswordView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/headerImage">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:padding="20dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/userNameView"
                            android:layout_width="match_parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_username"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/passwordInputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:passwordToggleEnabled="true"
                            app:layout_constraintTop_toBottomOf="@+id/userNameView">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_password"
                                android:imeActionId="6"
                                android:imeActionLabel="@string/action_sign_in_short"
                                android:imeOptions="actionUnspecified"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:fontFamily="sans-serif"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.onForgotPasswordClick()}"
                    android:text="@string/forgot_password"
                    android:textColor="@color/forgot_button"
                    android:visibility="visible"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/usernamePasswordView"
                    tools:text="Forgot Password?" />

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="@style/ButtonBoldStyle.Login"
                    android:layout_width="match_parent"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="25dp"
                    android:onClick="@{() -> viewModel.onLoginClick()}"
                    android:text="@string/action_sign_in"
                    app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="@color/forgot_button"
            android:visibility="visible"
            android:layout_marginBottom="25dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="Version Name" />


        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="@style/PrimaryProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:outlineAmbientShadowColor="@color/colorPrimaryDark"
            android:outlineSpotShadowColor="@color/colorPrimaryDark"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>